--- a/package.json
+++ b/package.json
@@ -1,8 +1,26 @@
 {
+  "name": "backend-lincep",
+  "version": "1.0.0",
+  "description": "Build backend server to Licep API",
+  "main": "app.js",
+  "scripts": {
+    "start": "nodemon app.js"
+  },
+  "author": "Fenner González",
+  "license": "MIT",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mysql": "^2.18.1"
+    "express-jwt": "^8.4.1",
+    "joi": "^17.11.0",
+    "jsonwebtoken": "^9.0.2",
+    "jwks-rsa": "^3.1.0",
+    "mysql": "^2.18.1",
+    "mysql2": "^3.6.2",
+    "node-schedule": "^2.1.1",
+    "sequelize": "^6.33.0",
+    "sequelize-cli": "^6.6.1"
   }
 }
