--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,9 @@
+NODE_ENV=development
 DB_HOST=localhost
-DB_USER=yourusername
-DB_PASSWORD=yourpassword
-DB_DATABASE=yourdatabase
+DB_PORT=3306
+DB_USER=userDatabase
+DB_PASSWORD=passwordDatabase
+DB_DATABASE=nameDatabase
 PORT=3000
+APP_SECRET_KEY_AUTH=secretAppKeyToToken
+FIRST_PASSWORD_USER=FirstPasswordToDatabaseSeeder
